Implimented fluent validations Implimented Pegination on search

--- a/ISTCOSA.Application/ISTCOSA.Application.csproj
+++ b/ISTCOSA.Application/ISTCOSA.Application.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
 	  <PackageReference Include="AutoMapper" Version="13.0.1" />
 	  <PackageReference Include="MediatR" Version="12.2.0" />
@@ -15,17 +17,16 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4"/>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4" />
 	  <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
 	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 	  <PackageReference Include="System.Drawing.Common" Version="8.0.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="CommandAndQuries\Company\Commands\" />
-    <Folder Include="CommandAndQuries\Industry\Commands\" />
-    <Folder Include="CommandAndQuries\RegistrationComplition\Query\" />
-    <Folder Include="CommandAndQuries\UserProfile\Queries\" />
+    <Folder Include="CommandAndQueries\Company\Commands\" />
+    <Folder Include="CommandAndQueries\Industry\Commands\" />
+    <Folder Include="CommandAndQueries\UserProfile\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
