--- a/ISTCOSA.Application/ISTCOSA.Application.csproj
+++ b/ISTCOSA.Application/ISTCOSA.Application.csproj
@@ -18,6 +18,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
 	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 	  <PackageReference Include="System.Drawing.Common" Version="8.0.4" />
