update validations in all commands Create GetById API for view profile made relation between userpersonal and userwork, userstudent table,userregister table Modify UserPersonal Create API changes in mapping mapping

--- a/ISTCOSA/appsettings.json
+++ b/ISTCOSA/appsettings.json
@@ -47,5 +47,9 @@
     "ToEmail": "sahilchauhan482@gmail.com",
     "CcEmail": "Sahilchauhan482@gmail.com"
   },
+  "APISetting": {
+    "URL": "http://192.168.29.210:8011"
+    //"URL": "http://localhost:5272"
+  },
   "AllowedHosts": "*"
 }
