--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,11 +18,9 @@ jobs:
       - name: Stop application pool
         shell: powershell
         run: |
-          Import-Module WebAdministration
-          $appPool = "elevate-performance"    
-          Write-Host "Stopping App Pool: $appPool..."
-          Stop-WebAppPool -Name $appPool
-          Write-Host "App Pool stopped."
+         Write-Host "Stopping App Pool..."
+         & "C:\Windows\System32\inetsrv\appcmd.exe" stop apppool /apppool.name:"elevate-performance"
+         Write-Host "App Pool stopped."
     
       - name: Copy files to IIS site
         shell: powershell
@@ -35,8 +33,6 @@ jobs:
       - name: Start application pool
         shell: powershell
         run: |
-          Import-Module WebAdministration
-          $appPool = "elevate-performance"    
-          Write-Host "Starting App Pool: $appPool..."
-          Start-WebAppPool -Name $appPool
-          Write-Host "App Pool started."
+         Write-Host "Starting App Pool..."
+         & "C:\Windows\System32\inetsrv\appcmd.exe" start apppool /apppool.name:"elevate-performance"
+         Write-Host "App Pool started."
