--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         shell: powershell
         run: |
           Import-Module WebAdministration
-          $appPool = "elevate-performance"    
+          $appPool = "Elevate-performance"    
           Write-Host "Stopping App Pool: $appPool..."
           Stop-WebAppPool -Name $appPool
           Write-Host "App Pool stopped."
@@ -37,7 +37,7 @@ jobs:
         shell: powershell
         run: |
           Import-Module WebAdministration
-          $appPool = "elevate-performance"    
+          $appPool = "Elevate-performance"    
           Write-Host "Starting App Pool: $appPool..."
           Start-WebAppPool -Name $appPool
           Write-Host "App Pool started."
