--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,11 @@ jobs:
       - name: Stop IIS Website
         shell: powershell
         run: |
-          $siteName = "C:\inetpub\wwwroot\elevate-performance"
+          $siteName = "elevate-performance"
           Write-Host "Stopping IIS Website: $siteName..."
-          & "C:\Windows\System32\inetsrv\appcmd.exe" stop site /site.name:"$siteName"
-          if ($LASTEXITCODE -ne 0) { 
-            Write-Host "⚠️ Warning: Failed to stop IIS site. It may already be stopped." 
-          } else {
-            Write-Host "Website stopped successfully."
-          }
+          & "C:\Windows\System32\inetsrv\appcmd.exe" stop site :"$siteName"         
+          Write-Host "Website stopped successfully."
+          
     
       - name: Copy files to IIS site
         shell: powershell
@@ -38,12 +35,8 @@ jobs:
       - name: Start IIS Website
         shell: powershell
         run: |
-          $siteName = "C:\inetpub\wwwroot\elevate-performance"
+          $siteName = "elevate-performance"
           Write-Host "Starting IIS Website: $siteName..."
-          & "C:\Windows\System32\inetsrv\appcmd.exe" start site /site.name:"$siteName"
-          if ($LASTEXITCODE -ne 0) {
-            Write-Host "⚠️ Warning: Failed to start IIS site. Please check manually."
-            exit $LASTEXITCODE
-          } else {
-            Write-Host "Website started successfully."
-          }
+          & "C:\Windows\System32\inetsrv\appcmd.exe" start site :"$siteName"           
+          Write-Host "Website started successfully."
+          
