--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,15 +15,16 @@ jobs:
       - name: Publish Web API 
         run: dotnet publish ./ISTCOSA/ISTCOSA.csproj -c Release -o ./publish    
 
-      - name: Stop IIS App Pool 
+      - name: Stop IIS Website
         shell: powershell
         run: |
-         Import-Module WebAdministration
-         $appPool = "bar"
-         Write-Host "Stopping App Pool: $appPool..."
-         Stop-WebAppPool -Name $appPool
-         Start-Sleep -Seconds 5
-         Write-Host "App Pool stopped successfully."
+          Import-Module WebAdministration
+          $siteName = "ep-api"   # CHANGE THIS
+          Write-Host "Stopping IIS Website: $siteName..."
+          Stop-Website -Name $siteName -ErrorAction SilentlyContinue
+ 
+          Start-Sleep -Seconds 5
+          Write-Host "IIS Website stopped successfully."
 
           
     
@@ -35,13 +36,14 @@ jobs:
           Write-Host "Robocopy exit code: $exitCode"
           if ($exitCode -ge 8) { exit $exitCode } else { exit 0 }
           
-      - name: Start IIS App Pool
+      - name: Start IIS Website
         shell: powershell
         run: |
-         Import-Module WebAdministration
-         $appPool = "bar"
-         Write-Host "Starting App Pool: $appPool..."
-         Start-WebAppPool -Name $appPool
-         Write-Host "App Pool started successfully."
+          Import-Module WebAdministration
+          $siteName = "ep-api"   # CHANGE THIS 
+          Write-Host "Starting IIS Website: $siteName..."
+          Start-Website -Name $siteName
+ 
+          Write-Host "IIS Website started successfully."
 
           
